# gallerize

./: .editorconfig  .gitignore  .landscape.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  gallerize.py  gallerize_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_gallerize.py  tox.ini
src/gallerize/: __init__.py  cli.py  files.py  html.py  images.py  logging.py  main.py  models.py
src/gallerize/static/: style.css
src/gallerize/templates/: _layout.html  index.html  view.html
static/: jquery.fancybox.min.js  jquery.lightbox.min.js  lightbox.min.css
templates/: _layout.html  index.html  index_bare.html  style.css  view.html
tests/: test_find_duplicate_filenames.py  test_parse_dimension_arg.py  test_window.py
