[metadata]
name = gallerize
version = attr: gallerize.VERSION
url = https://homework.nwsnet.de/releases/cc0e/#gallerize
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: File Sharing
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics :: Presentation
license = MIT
license_file = LICENSE
description = Create a static HTML/CSS image gallery from a bunch of images.
long_description = file: README.rst, CHANGES.rst
keywords = gallery
platforms = any

[options]
zip_safe = False
install_requires =
    Jinja2==2.11.3
python_requires = >=3.7
packages = find:

[options.entry_points]
console_scripts =
    gallerize = gallerize:main
