[metadata]
name = gallerize
version = attr: gallerize.VERSION
url = https://homework.nwsnet.de/releases/cc0e/#gallerize
author = Jochen Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: File Sharing
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Graphics :: Presentation
license = MIT
license_file = LICENSE
description = Create a static HTML/CSS image gallery from a bunch of images.
long_description = file: README.rst, CHANGES.rst
keywords = gallery
platforms = any

[options]
zip_safe = False
install_requires =
    Jinja2==3.0.1
python_requires = >=3.7
packages = find:
package_dir = =src

[options.entry_points]
console_scripts =
    gallerize = gallerize.cli:main

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
python_version = 3.7
